--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -16,7 +16,7 @@
             <!-- Produce One Row-->
             <div class="row justify-content-center no-gutters">
                 <div class="col-xl-12">
-                    <h1 class="product-text-one mx-auto text-uppercase text-center flex-margin-b text-blue">Add a Product</h1>
+                    <h1 class="product-text-one mx-auto text-uppercase text-center flex-margin-b text-blue">Add {{ dataset }}</h1>
                 </div>
                 <div class="col-xl-6">
                     {% if dataset == "categories" %}
@@ -36,21 +36,24 @@
                             <div class="product-container w-100 mt-0 text-center text-xl-left">
                                 <div class="row">
                                     <div class="col-12">
-                                        <form class="mt-3" action="{% url 'add_product' %}" method="POST" enctype="multipart/form-data" id="new-product-form">
-                                            {% csrf_token %}
-                                                <select class="textinput textInput form-control mb-3 text-blue text-xs" type="text" name="new_category" id="new_category" placeholder="category">
-                                                    {% for category in categories %}
-                                                        <option value="{{ category.name }}">{{ category.friendly_name }}</option>
-                                                    {% endfor %}
-                                                </select>
-                                                <input class="textinput textInput form-control mb-3 text-blue text-xs" type="text" name="new_name" id="new_name" placeholder="name">
-                                                <input class="textinput textInput form-control mb-3 text-blue text-xs" type="text" name="new_description" id="new_description" placeholder="description">
-                                                <input class="numberinput form-control mb-3 text-blue text-xs" type="text" name="new_price" id="new_price" placeholder="price">
-                                                <select class="textinput textInput form-control mb-3 text-blue text-xs" type="text" name="new_range" id="new_range" placeholder="range">
-                                                    <option value="standard">Standard</option>
-                                                    <option value="premium">Premium</option>
-                                                    <option value="luxury">Luxury</option>
-                                                </select>
+                                        <form class="mt-3" action="{% url 'add_product' %}?dataset={{ dataset }}" method="POST" enctype="multipart/form-data" id="new-product-form">
+                                                {% csrf_token %}
+                                                {% if dataset == 'products' %}
+                                                    <select class="textinput textInput form-control mb-3 text-blue text-xs" type="text" name="new_category" id="new_category" placeholder="category">
+                                                        {% for category in categories %}
+                                                            <option value="{{ category.name }}">{{ category.friendly_name }}</option>
+                                                        {% endfor %}
+                                                    </select>
+                                                    <input class="textinput textInput form-control mb-3 text-blue text-xs" type="text" name="new_name" id="new_name" placeholder="* name">
+                                                    <input class="textinput textInput form-control mb-3 text-blue text-xs" type="text" name="new_description" id="new_description" placeholder="* description">
+                                                    <input class="numberinput form-control mb-3 text-blue text-xs" type="text" name="new_price" id="new_price" placeholder="* price">
+                                                    <select class="textinput textInput form-control mb-3 text-blue text-xs" type="text" name="new_range" id="new_range" placeholder="range">
+                                                        <option value="standard">Standard</option>
+                                                        <option value="premium">Premium</option>
+                                                        <option value="luxury">Luxury</option>
+                                                    </select>
+                                                    <input class="unhidden" type="text" name="dataset" id="dataset" value="{{ dataset }}">
+                                                {% endif %}
                                             <button class="bg-grey border-solid px-3 masthead-button btn btn-primary js-scroll-trigger float-right">Save</button>
                                         </form>
                                     </div>
