Build: delete_product view added

--- a/products/templates/products/product_admin.html
+++ b/products/templates/products/product_admin.html
@@ -151,7 +151,7 @@
                                                     href="{% url 'add_product' %}?dataset={{ dataset }}">
                                                     Add</a>
                                                 <a class="bg-red border-solid ml-lg-3 px-3 masthead-button btn btn-primary js-scroll-trigger " 
-                                                    href="{% url 'update_product' form.id_no.value %}">
+                                                    href="{% url 'delete_product' form.id_no.value %}">
                                                     Delete</a>
                                             </div>
                                         </form>
