--- a/products/templates/products/search_products.html
+++ b/products/templates/products/search_products.html
@@ -19,7 +19,7 @@
                     {% if product_results %}
                         <h1 class="product-text-one mx-auto text-uppercase text-center flex-margin-b text-blue">Search Results</h1>
                     {% else %}
-                        <h1 class="product-text-one mx-auto text-uppercase text-center flex-margin-b text-blue">Error</h1>
+                        <h1 class="product-text-header mx-auto text-uppercase text-center flex-margin-b text-blue">Nothing matched - please try again</h1>
                     {% endif %}
                 </div>
                 <div class="col-xl-6">
