--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     {% block corecss %}
         <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
+        <!-- Core theme CSS (includes Bootstrap) -->
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" /> <!-- Credit: https://startbootstrap.com/previews/grayscale -->
         <!-- slider CSS -->
         <link href="{% static 'css/slider.css' %}" rel="stylesheet" /> <!-- Credit: https://www.w3schools.com/howto/howto_js_rangeslider.asp -->
@@ -27,15 +27,17 @@
     {% endblock %}
 
     {% block corejs %}
-        <!-- Font Awesome icons (free version)-->
+        <!-- Font Awesome icons (free version) -->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
-        <!-- Bootstrap core JS-->
+        <!-- Bootstrap core JS -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Third party plugin JS-->
+        <!-- Third party plugin JS -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-        <!-- Core theme JS-->
+        <!-- Core theme JS -->
         <script src="{% static 'js/scripts.js' %}"></script> <!-- Credit: https://startbootstrap.com/previews/grayscale -->
+        <!-- Form Validation -->
+        <script src="{% static 'js/validation.js' %}"></script>
         <!-- Stripe -->
         <script src="https://js.stripe.com/v3/"></script>
     {% endblock %}
@@ -85,7 +87,7 @@
     <title>Build-a-Buffet{% block extra_title %}{% endblock %}</title>
   </head>
   <body id="page-top" onload="createCookie()">
-        <!-- Navigation-->
+        <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container">
                 <a class="navbar-brand js-scroll-trigger navbar-brand-vis" href="#page-top">BUILD-A-BUFFET</a>
