Build: added validation for product_search_form

--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -48,7 +48,7 @@ select option[value=""] {
 }
 
 #loading-overlay {
-	/* display: none; */
+	display: none;
 	position: fixed;
     top: 0;
     left: 0;
