--- a/templates/base.html
+++ b/templates/base.html
@@ -36,8 +36,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
         <!-- Core theme JS -->
         <script src="{% static 'js/scripts.js' %}"></script> <!-- Credit: https://startbootstrap.com/previews/grayscale -->
-        <!-- Form Validation -->
-        <script src="{% static 'js/validation.js' %}"></script>
         <!-- Stripe -->
         <script src="https://js.stripe.com/v3/"></script>
     {% endblock %}
@@ -106,8 +104,8 @@
                     </ul>
                 </div>
                 <div class="ml-2 mr-auto">
-                    <form action="{% url 'search_products' %}" method="GET">
-                        <input class="search-input text-blue text-xs" type="text" name="product_search" id="product_search" placeholder=" search ...">
+                    <form action="{% url 'search_products' %}" method="GET" id="product_search_form" >
+                        <input class="search-input text-blue text-xs" type="text" name="product_search" id="product_search" placeholder=" search ..." maxlength="18">>
                         <button class="search-button text-center" type="submit">
                                 <i class="fas fa-search"></i>
                         </button>
@@ -167,6 +165,9 @@
                 </div>
             </div>
         </nav>
+        <div id="validation_alerts">
+            Validation Alerts
+        </div>
 
     {% if messages %}
         <div class="message-container">
@@ -186,6 +187,8 @@
     <script>
         $(".toast").toast('show');
     </script>
+    <!-- Form Validation -->
+    <script src="{% static 'js/validation.js' %}"></script>
     {% endblock %}
 
   </body>
