Build: validating payment-form

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -189,11 +189,11 @@
             </div>
         </div>
     </section>
-    <div id="loading-overlay">
+    <!-- <div id="loading-overlay">
         <div class="loading-image-div">
             <img class="loading-img" src="{{ MEDIA_URL }}assets/img/bartholemew-pay.jpg" alt="bartholemew">
         </div>
-    </div>
+    </div> -->
 {% include 'includes/contact.html' %}
 {% endblock %}
 
