--- a/templates/base.html
+++ b/templates/base.html
@@ -105,7 +105,7 @@
                 </div>
                 <div class="ml-2 mr-auto">
                     <form action="{% url 'search_products' %}" method="GET" id="product_search_form" >
-                        <input class="search-input text-blue text-xs" type="text" name="product_search" id="product_search" placeholder=" search ..." maxlength="18">>
+                        <input class="search-input text-blue text-xs" type="text" name="product_search" id="product_search" placeholder=" search ..." maxlength="18">
                         <button class="search-button text-center" type="submit">
                                 <i class="fas fa-search"></i>
                         </button>
