Build: added safety check on delete_product

--- a/products/templates/products/product_admin.html
+++ b/products/templates/products/product_admin.html
@@ -180,7 +180,7 @@
                                                 <a class="bg-green border-solid px-3 masthead-button btn btn-primary js-scroll-trigger float-left" 
                                                     href="{% url 'add_product' %}?dataset={{ dataset }}">
                                                     Add</a>
-                                                <a class="bg-red border-solid ml-lg-3 px-3 masthead-button btn btn-primary js-scroll-trigger " 
+                                                <a id="delete-product" class="bg-red border-solid ml-lg-3 px-3 masthead-button btn btn-primary js-scroll-trigger " 
                                                     href="{% url 'delete_product' form.id_no.value %}">
                                                     Delete</a>
                                             </div>
