--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -52,45 +52,57 @@
                                     <div class="col-4">
                                         {% if selected == "selected-one" %}
                                             {% for option in options %}
-                                                <a class="product-selected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" 
-                                                    href="{% url 'product_detail' %}?product_edit={{ category }},{{ product }},selected-one,{{ item_number }},{{ servings }},{{total_price}}">
-                                                    {{ option.option1 }}</a>
+                                                {% if option.category|slugify == category %}
+                                                    <a class="product-selected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" 
+                                                        href="{% url 'product_detail' %}?product_edit={{ category }},{{ product }},selected-one,{{ item_number }},{{ servings }},{{total_price}}">
+                                                        {{ option.option1 }}</a>
+                                                {% endif %}
                                             {% endfor %}
                                         {% else %}
                                             {% for option in options %}
-                                                <a class="product-unselected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" 
-                                                    href="{% url 'product_detail' %}?product_edit={{ category }},{{ product }},selected-one,{{ item_number }},{{ servings }},{{total_price}}">
-                                                    {{ option.option1 }}</a>
+                                                {% if option.category|slugify == category %}
+                                                    <a class="product-unselected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" 
+                                                        href="{% url 'product_detail' %}?product_edit={{ category }},{{ product }},selected-one,{{ item_number }},{{ servings }},{{total_price}}">
+                                                        {{ option.option1 }}</a>
+                                                {% endif %}
                                             {% endfor %}
                                         {% endif %}
                                     </div>
                                     <div class="col-4">
                                         {% if selected == "selected-two" %}
                                             {% for option in options %}
-                                                <a class="product-selected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" 
-                                                    href="{% url 'product_detail' %}?product_edit={{ category }},{{ product }},selected-two,{{ item_number }},{{ servings }},{{total_price}}">
-                                                    {{ option.option2 }}</a>
+                                                {% if option.category|slugify == category %}
+                                                    <a class="product-selected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" 
+                                                        href="{% url 'product_detail' %}?product_edit={{ category }},{{ product }},selected-two,{{ item_number }},{{ servings }},{{total_price}}">
+                                                        {{ option.option2 }}</a>
+                                                {% endif %}
                                             {% endfor %}
                                         {% else %}
                                             {% for option in options %}
-                                                <a class="product-unselected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" 
-                                                    href="{% url 'product_detail' %}?product_edit={{ category }},{{ product }},selected-two,{{ item_number }},{{ servings }},{{total_price}}">
-                                                    {{ option.option2 }}</a>
+                                                {% if option.category|slugify == category %}
+                                                    <a class="product-unselected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" 
+                                                        href="{% url 'product_detail' %}?product_edit={{ category }},{{ product }},selected-two,{{ item_number }},{{ servings }},{{total_price}}">
+                                                        {{ option.option2 }}</a>
+                                                {% endif %}
                                             {% endfor %}
                                         {% endif %}
                                     </div>
                                     <div class="col-4">
                                         {% if selected == "selected-three" %}
                                             {% for option in options %}
-                                                <a class="product-selected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" 
-                                                    href="{% url 'product_detail' %}?product_edit={{ category }},{{ product }},selected-three,{{ item_number }},{{ servings }},{{total_price}}">
-                                                    {{ option.option3 }}</a>
+                                                {% if option.category|slugify == category %}
+                                                    <a class="product-selected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" 
+                                                        href="{% url 'product_detail' %}?product_edit={{ category }},{{ product }},selected-three,{{ item_number }},{{ servings }},{{total_price}}">
+                                                        {{ option.option3 }}</a>
+                                                {% endif %}
                                             {% endfor %}
                                         {% else %}
                                             {% for option in options %}
-                                                <a class="product-unselected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" 
-                                                    href="{% url 'product_detail' %}?product_edit={{ category }},{{ product }},selected-three,{{ item_number }},{{ servings }},{{total_price}}">
-                                                    {{ option.option3 }}</a>
+                                                {% if option.category|slugify == category %}
+                                                    <a class="product-unselected masthead-button btn btn-primary js-scroll-trigger flex-margin-b" 
+                                                        href="{% url 'product_detail' %}?product_edit={{ category }},{{ product }},selected-three,{{ item_number }},{{ servings }},{{total_price}}">
+                                                        {{ option.option3 }}</a>
+                                                {% endif %}
                                             {% endfor %}
                                         {% endif %}
                                     </div>
