--- a/templates/base.html
+++ b/templates/base.html
@@ -140,7 +140,7 @@
                                     account
                                     <hr class="d-none d-lg-block user-br">
                                     <span class="user-text">
-                                    ({{ request.user }})</span> <!-- Credit: https://stackoverflow.com/questions/12615154/how-to-get-the-currently-logged-in-users-user-id-in-django -->
+                                    ({{ request.user|truncatechars:10 }})</span> <!-- Credit: https://stackoverflow.com/questions/12615154/how-to-get-the-currently-logged-in-users-user-id-in-django -->
                                 </a>
                             {% else %}
                                 <a class="nav-link" href="{% url 'account_login' %}">login</a>
